2003-11-08  Theodore A. Roth  <troth@openavr.org>

	* src/main.cc (usage): Make the -B option info fit on a 80 column
	terminal.

2003-11-08  Theodore A. Roth  <troth@openavr.org>
[Thanks to Nils Kristian Strom <nilsst@omegav.ntnu.no>]

	* configure.ac (AC_INIT): Bump version.
	* src/jtagio.cc (initJtagBox): Inform user about the lock bits and
	fuses that actually *are* programmed, not the ones that were found in
	the device.

2003-11-01  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* src/jtag.h: Add JTAG_BITRATE_1_MHz, JTAG_BITRATE_500_KHz,
	JTAG_BITRATE_250_KHz and JTAG_BITRATE_125_KHz defs.
	(initJtagBox): Add bitrate argument.
	* src/jtagio.cc (initJtagBox): Allow passing the jtag bitrate.
	* src/main.cc: Add the -B (--jtag-bitrate) option.

2003-10-23  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* doc/dev_desc.txt: New file.
	* src/jtag.h:
	* src/jtagio.cc:
	Make the device description arrays into a structures.

2003-10-20  Theodore A. Roth  <troth@openavr.org>
[Thanks to Dean Ferreyra <dferreyra@igc.org>]

	* configure.ac (AC_INIT): Bump version.
	* src/main.cc: Fix to allow erasing the device as a single operation.

2003-09-25  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* doc/Makefile.am (EXTRA_DIST): Add the .txt files.
	* doc/README.cygwin: New file, from Eric Weddington.

2003-09-18  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* avarice.spec.in: Add man pages.

2003-09-18  Theodore A. Roth  <troth@openavr.org>
[Thanks to Amedee Louis Beaudoin <deoxy@u.washington.edu>]

	* src/jtagrw.cc (jtagWriteFuses): Enter programming mode before writing
	and exit program mode after reading.
	(jtagWriteLockBits): Ditto.

2003-08-25  David Gay  <dgay@barnowl.research.intel-research.net>

	* configure.ac: bump version
	* src/jtagprog.cc: work around cygwin gcc (3.2.3) bug with